--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
     --white: #FFFFFF;
     --font-default: 'Montserrat', sans-serif;
     --big-font: 60px;
-    --descr-font: 18px;
+    --descr-font: 24px;
+    --nav-font: 18px;
     --action-font: 32px;
     --small-font: 12px;
     --medium-font: 48px;
@@ -38,7 +39,7 @@
     list-style: none;
     justify-content: space-evenly;
     font-family: var(--font-default);
-    font-size: var(--descr-font);
+    font-size: var(--nav-font);
     text-transform: uppercase;
 }
 
@@ -65,4 +66,58 @@
 .ban-logo > img{
     width: 100%;
     height: auto;
+}
+
+.aboutus{
+    height: 100vh;
+    font-family: var(--font-default);
+    padding: 50px;
+}
+
+.au-title{
+    font-size: var(--big-font);
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.au-content{
+    width: 60vw;
+    padding-top: 20px;
+    font-size: var(--descr-font);
+    line-height: 2em;
+}
+
+.au-subtitle{
+    padding-top: 30px;
+    padding-bottom: 30px;
+    text-align: center;
+    font-size: var(--medium-font);
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.team{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+.card-member{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    text-align: center;
+}
+
+.cm-image{
+    width: 200px;
+    height: 200px;
+    margin-bottom: 30px;
+}
+
+.cm-image > img{
+    width: 100%;
+    height: 100%;
+    border-radius: 100px;
+    border: 3px solid var(--black);
 }
