--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
 }
 
 .aboutus{
-    height: 100vh;
+    height: calc(100vh -100px);
     font-family: var(--font-default);
     padding: 50px;
 }
@@ -120,4 +120,53 @@
     height: 100%;
     border-radius: 100px;
     border: 3px solid var(--black);
+}
+
+.quizz{
+    height: calc(100vh - 4rem);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 81.77%), url("images/doctors.jpg") center 0% no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    color: var(--white);
+    align-items: flex-end;
+    padding-bottom: 4rem;
+}
+
+.quizz-title{
+    font-family: var(--font-default);
+    font-size: var(--big-font);
+    font-weight: bold;
+    text-transform: uppercase;
+    width: 35rem;
+}
+
+.quizz-opts{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.gotoservice, .gotoservices{
+    color: var(--white);
+    font-family: var(--font-default);
+    font-size: var(--action-font);
+    font-weight: bold;
+    text-decoration: none;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.gotoservice{
+    text-transform: uppercase;
+    border: 3px solid var(--white);
+    padding: 1rem 6rem 1rem 6rem;
+}
+
+.gotoservices{
+    text-transform: capitalize;
+    padding: 5px;
+    border-bottom: 3px solid var(--white);
 }
