--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 }
 
 .logo > img{
-    height: 100%;
+    max-height: 100%;
 }
 
 .nav-options{
@@ -63,7 +63,7 @@
 }
 
 .ban-logo > img{
-    width: 100%;
+    max-width: 100%;
     height: auto;
 }
 
@@ -196,4 +196,36 @@
     width: 500px;
     padding-top: 2rem;
     padding-bottom: 3rem;
+}
+
+.news{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+}
+
+.new{
+    width: 20vw;
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.new-img{
+    max-width: 100%;
+    height: 14vw;
+    margin-bottom: 1rem;
+}
+
+.new-img > img{
+    width: 100%;
+    height: 100%;
+}
+
+.new-content{
+    font-family: var(--font-default);
+    font-size: var(--small-font);
+    max-height: 3rem;
+    overflow: hidden;
 }
