--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 :root{
     --black: #000000;
     --white: #FFFFFF;
+    --grey: #F1F1F1;
+    --green: #0EFA09;
+    --red: #FA0909;
     --font-default: 'Montserrat', sans-serif;
     --big-font: 62px;
     --descr-font: 24px;
@@ -46,6 +49,14 @@
     padding-right: 24px;
     text-decoration: none;
     color: var(--white);
+}
+
+.footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--grey);
+    height: 3rem;
 }
 
 .banner{
@@ -133,7 +144,7 @@
     padding-bottom: 4rem;
 }
 
-.quizz-title, .art-title{
+.quizz-title, .art-title, .el-title{
     font-family: var(--font-default);
     font-size: var(--big-font);
     font-weight: bold;
@@ -228,4 +239,79 @@
     font-size: var(--small-font);
     max-height: 3rem;
     overflow: hidden;
+}
+
+.election{
+    height: 69vh;
+    background: radial-gradient(40.83% 40.83% at 50% 59.17%, rgba(137, 128, 128, 0.31) 0%, rgba(0, 0, 0, 0.5) 100%), url("images/cybus.jpg");
+    background-size: cover;
+    color: var(--white);
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    position: relative;
+}
+
+.el-title{
+    width: fit-content;
+    position: absolute;
+    top: 104px;
+}
+
+.el-desc{
+    font-family: var(--font-default);
+    font-size: var(--action-font);
+    width: 25vw;
+    text-align: center;
+    position: absolute;
+    top: 260px;
+}
+
+.contestans{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    width: 80vw;
+    position: absolute;
+    bottom: 240px;
+}
+
+.contestan .cont-name{
+    font-family: var(--font-default);
+    font-size: var(--medium-font);
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.contestan .percentage{
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.cont-bar{
+    height: 24px;
+    border-radius: 8px;
+    margin-right: 16px;
+}
+
+.percentage .opt1{
+    width: 240px;
+    background: var(--green);
+}
+
+.percentage .opt2{
+    width: 80px;
+    background: var(--red);
+}
+
+.cont-percent{
+    font-family: var(--font-default);
+    font-size: var(--descr-font);
+}
+
+.election .time-left{
+    font-family: var(--font-default);
+    font-size: var(--action-font);
+    position: absolute;
+    bottom: 24px;
 }
