--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --grey: #F1F1F1;
     --green: #0EFA09;
     --red: #FA0909;
+    --blue: #3262E0;
     --font-default: 'Montserrat', sans-serif;
     --big-font: 62px;
     --descr-font: 24px;
@@ -242,7 +243,7 @@
 }
 
 .election{
-    height: 69vh;
+    height: 36rem;
     background: radial-gradient(40.83% 40.83% at 50% 59.17%, rgba(137, 128, 128, 0.31) 0%, rgba(0, 0, 0, 0.5) 100%), url("images/cybus.jpg");
     background-size: cover;
     color: var(--white);
@@ -255,7 +256,7 @@
 .el-title{
     width: fit-content;
     position: absolute;
-    top: 104px;
+    top: 15%;
 }
 
 .el-desc{
@@ -264,7 +265,7 @@
     width: 25vw;
     text-align: center;
     position: absolute;
-    top: 260px;
+    top: 30%;
 }
 
 .contestans{
@@ -273,7 +274,7 @@
     justify-content: space-between;
     width: 80vw;
     position: absolute;
-    bottom: 240px;
+    bottom: 30%;
 }
 
 .contestan .cont-name{
@@ -314,4 +315,54 @@
     font-size: var(--action-font);
     position: absolute;
     bottom: 24px;
+}
+
+.store{
+    min-height: 45vh;
+    background-color: var(--grey);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 4rem 2rem 4rem;
+}
+
+.store-title{
+    font-family: var(--font-default);
+    font-size: var(--medium-font);
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.store-content{
+    display: flex;
+    flex-flow: row wrap;
+    margin-top: 20px;
+}
+
+.store-img{
+    width: 54vw;
+    height: 24rem;
+}
+
+.store-img img{
+    width: 100%;
+    max-height: 100%;
+}
+
+.store-card{
+    width: 24vw;
+    height: calc(24rem - 4rem);
+    background-color: var(--white);
+    font-family: var(--font-default);
+    font-size: var(--descr-font);
+    padding: 2rem;
+    line-height: 40px;
+    position: relative;
+}
+
+.store-card > .gotoservices{
+    color: var(--blue);
+    position: absolute;
+    bottom: 0%;
+    right: 10%;
 }
