--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     --medium-font: 48px;
 
     --mov-big-font: 40px;
+    --mov-small-font: 10px;
 }
 
 *{
@@ -530,6 +531,45 @@
         align-self: center;
         font-size: var(--mid-font);
         bottom: 5%;
+    }
+
+    .store{
+        min-height: 45vh;
+        
+        padding: 0px;
+    }
+    
+    .store-title{
+        font-size: var(--action-font);
+        margin-top: 4rem;
+    }
+    
+    .store-content{
+        flex-flow: column wrap;
+        align-items: center;
+        margin-top: 20px;
+    }
+    
+    .store-img{
+        width: 100vw;
+        height: auto;
+    }
+    
+    .store-card{
+        width: 80vw;
+        height: fit-content;
+        font-size: var(--mid-font);
+        padding: 2vw 10vw 0vw 10vw;
+        line-height: 20px;
+        position: relative;
+    }
+    
+    .store-card > .gotoservices{
+        font-size: var(--mov-small-font);
+        position: initial;
+        display: block;
+        margin-bottom: 0px;
+        text-align: end;
     }
     
 }
