--- a/servicios.css
+++ b/servicios.css
@@ -1,14 +1,13 @@
 :root {
-    --white-darken: #F2F2F2;
-    --black: #0808084d;
-    --orange: #ff9b04;
     --grey-light:#E9EFE7;
+    --grey: #F1F1F1;
+    --blue: #3262E0;
     --font-primary: 'Montserrat', sans-serif;
     --small-font: 12px;
+    --title-art-font:16px;
     --action-font: 20px;
     --descr-font: 24px;
     --medium-font: 48px;
-    --big-font: 62px;
 }
 
 *,
@@ -21,6 +20,7 @@ body {
     font-family: var(--font-primary);
     font-weight: 300;
     font-size: var(--small-font);
+    line-height: 1.75;
 }
 
 
@@ -45,7 +45,8 @@ header{
   height: 100%;
 }
 
-.logo img {
+.logo img, .quizz-card .quizz-card-figure img, 
+.art-card .art-card-figure img, .product-card .product-card-figure img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -87,7 +88,7 @@ header{
   margin: auto auto 2rem auto;
 }
 
-.quizzes, .products, .arts{
+.quizzes, .products, .arts, .ftr{
   display:flex;
   align-items: center;
   justify-content: center;
@@ -108,27 +109,22 @@ header{
     height: 200px;
   }
   
-  .quizz-card .quizz-card-figure img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
   .quizz-card .quizz-card-content p{
     margin: 1rem 0 ;
   }
 
-  .quizz-card .quizz-card-content span {
+  .quizz-card .quizz-card-content span, 
+  .art-card .art-card-content span {
     display: block;
     font-weight: bold;
-    color: #3262E0;
+    color: var(--blue);
     margin-bottom: .5rem;
 
   }
 
   .btn{
     text-decoration: none;
-    color: #3262E0;
+    color: var(--blue);
     display: block;
     text-align: end;
     font-size: var(--action-font);
@@ -141,7 +137,7 @@ header{
   }
 
   .arts{
-    max-width: 1200px;
+    max-width: 1300px;
     padding: 2rem;
     flex-direction: column;
     margin: auto;
@@ -160,23 +156,31 @@ header{
     height: 16rem;
   }
 
-  .art-card .art-card-figure img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
   .art-card-content{
     width: 50%;
-    margin: 2rem;
+    margin: auto 0;
+    padding: 1rem;
   }
 
   .art-card-content h1{
     font-weight: bold;
-    font-size: var(--descr-font);
+    font-size: var(--title-art-font);
+    text-transform: uppercase;
   }
 
-  
+  .art-card-content p{
+    margin: 2rem auto;
+  }
+
+  .art-card-reverse{
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .art-card-reverse .art-card-content{
+    padding-left: 0;
+  }
+
   .product-card{
       max-width: 200px;
       min-height: max-content;
@@ -190,12 +194,6 @@ header{
   .product-card .product-card-figure{
     width: 100%;
     height: 150px;
-  }
-  
-  .product-card .product-card-figure img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
   }
   
   .product-card .product-card-content {
@@ -213,8 +211,11 @@ header{
   .product-card .product-card-content span {
     display: block;
     font-weight: bold;
-    color: #3262E0;
+    color: var(--blue);
     text-align: end;
   }
 
-  
+  .ftr{
+    background-color: var(--grey);
+    height: 3rem;
+  }
