--- a/servicios.css
+++ b/servicios.css
@@ -56,6 +56,7 @@ header{
 .nav-bar .nav-options li{
   display: inline-block;
   margin: 1rem;
+  text-transform: uppercase;
 }
 
 .hero-banner{
@@ -87,6 +88,7 @@ header{
   font-weight: 300;
   font-size: var(--descr-font);
   margin: auto auto 2rem auto;
+  text-transform: uppercase;
 }
 
 .quizzes, .products, .arts, .ftr{
@@ -216,6 +218,7 @@ header{
     display: block;
     font-weight: bold;
     text-align: end;
+    text-transform: uppercase;
   }
 
   .ftr{
