--- a/servicios.css
+++ b/servicios.css
@@ -1,5 +1,7 @@
 :root {
-    --black: #0808084d;
+    --black: #000000;
+    --white: #FFFFFF;
+    --dark: #0808084d;
     --grey-light:#E9EFE7;
     --grey: #F1F1F1;
     --blue: #3262E0;
@@ -29,34 +31,49 @@ header{
   position: relative;
 }
 
-.nav-bar{
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: black;
+
+.navbar{
+  background-color: var(--black);
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   justify-content: space-between;
-  color: white;
-  padding: 3px 1rem;
+  align-items: center;
+  width: 100%;
+  height: 9vh;
 }
 
-.logo {
-  width: 6rem;
+.logo{
   height: 100%;
 }
 
-.logo img, .quizz-card .quizz-card-figure img, 
+.logo > img{
+  max-height: 100%;
+}
+
+.nav-options{
+  display: flex;
+  flex-flow: row wrap;
+  list-style: none;
+  justify-content: space-evenly;
+  font-size: var(--small-font);
+  text-transform: uppercase;
+}
+
+.nav-option > a{
+  padding-right: 24px;
+  text-decoration: none;
+  color: var(--white);
+}
+
+.burger{
+  display: none;
+}
+
+.quizz-card .quizz-card-figure img, 
 .art-card .art-card-figure img, .product-card .product-card-figure img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-.nav-bar .nav-options li{
-  display: inline-block;
-  margin: 1rem;
-  text-transform: uppercase;
 }
 
 .hero-banner{
@@ -69,7 +86,7 @@ header{
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  box-shadow:inset 0 0 0 2000px var(--black);
+  box-shadow:inset 0 0 0 2000px var(--dark);
 }
 
 .hero-banner h1{
@@ -231,8 +248,8 @@ header{
     .hero-banner{
       background-position-y: -1rem;
     }
-
-    .nav-bar .nav-options,
+    
+    .navbar .nav-options,
     .quizzes .quizz-card:nth-child(n+3),
     .arts .art-card:nth-child(n+3),
     .art-card .art-card-content p,
@@ -240,6 +257,20 @@ header{
     {
       display: none;
     }
+
+    .burger{
+      display: flex;
+      width: fit-content;
+      height: auto;
+      margin-right: 16px;
+    }
+
+    .burger img{
+        width: 48px;
+        padding-right: 16px;
+    }
+
+    
     
     .quizz-card{
       min-width: 400px;
@@ -290,8 +321,23 @@ header{
   }
 
   @media only screen and (max-width: 425px){
-    .nav-bar .nav-options{
+    .navbar .nav-options,
+    .quizzes .quizz-card:nth-child(n+4),
+    .products .product-card:nth-child(n+5)
+    {
       display: none;
+    }
+
+    .burger{
+      display: flex;
+      width: fit-content;
+      height: auto;
+      margin-right: 16px;
+    }
+
+    .burger img{
+        width: 48px;
+        padding-right: 16px;
     }
 
     .hero-banner{
@@ -314,12 +360,6 @@ header{
 
     .sect-quiz h2, .sect-art h2, .shop h2{
       font-size: var(--title-art-font);
-    }
-
-    .quizzes .quizz-card:nth-child(n+4),
-    .products .product-card:nth-child(n+5)
-    {
-      display: none;
     }
 
     .quizz-card{
@@ -387,7 +427,5 @@ header{
       max-width: 180px;
       margin: 8px;
     }
-
-    
     
   }
